--- a/src/layout/Login/Login.css
+++ b/src/layout/Login/Login.css
@@ -9,3 +9,6 @@ h2{
 h3{
     text-align: left;
 }
+.formcontainer{
+    text-align: left;
+}
